Closed Bug 72558 Opened 24 years ago Closed 23 years ago

maximized state not persisted if window is also minimized

Categories

(SeaMonkey :: UI Design, defect)

x86
Windows 98
defect
Not set
minor

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.0.1

People

(Reporter: jruderman, Assigned: danm.moz)

Details

Attachments

(1 file)

I noticed this while testing the fix to bug 50424, but I don't think the bugs are related. Steps to reproduce: 1. Open a single browser window and maximize it. 2a. Minimize the browser window. 2b. -or- hit Show Desktop on the taskbar. 3a. Close the browser window and restart Mozilla. 3b. -or- activate a shortcut to mozilla.exe. Result: A new restored browser window opens. Expected result: A new maximized browser window opens. Note: if I drag a shortcut to mozilla.exe to the taskbar and click on it while Mozilla is running, I do get a maximized window.
Another way to see this bug: Open a maximized mozilla window (no content needed) Open a new maximized mozilla window (ctrl-n or such) Minimize one of the mozilla windows From the lone maximized window hit ctrl-n to create a third window This third window will be 'restored' when it logically should be 'maximized' Quite an annoying bug. It looks to me like a remnant of the bug(s) of yore that concerned new windows never opening maximized (ala IE). But hey, I fully realize that I know nothing.
Oh, forgot to mention that this was on mozilla build 20010614 running on a win98 machine
QA Contact: sairuh → claudius
toolkit?
QA Contact: claudius → jrgm
Summary: maximized state not persisted if window is also minimzed → maximized state not persisted if window is also minimized
over to danm the manm
Assignee: pchen → danm
Target Milestone: --- → mozilla1.0.1
same problem in mail/news window: 1. open browser window in fullscreen 2. open mail/news window in fullscreen 3. minimize mail/news window 4. select file, exit in the browser window 5. restart mozilla browser 6. click on the envelope to start mail/news 7. mail/news window isn't in fullscreen anymore.
The thing to do is not persist the minimized state. That way it'll continue to persist the previous state, whether it was maximized or normal.
Status: NEW → ASSIGNED
Target Milestone: mozilla1.0.1 → mozilla1.1alpha
Target Milestone: mozilla1.1alpha → mozilla1.0.1
Comment on attachment 84995 [details] [diff] [review] don't persist minimized state r=bryner
Attachment #84995 - Flags: review+
Comment on attachment 84995 [details] [diff] [review] don't persist minimized state sr=jag
Attachment #84995 - Flags: superreview+
.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Product: Core → Mozilla Application Suite
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: