persist min/max state only if normal or maximized. bug 72558 r=bryner,jag